# ucpd-incident-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  Procfile  README.md  main.py  nltk.txt  pyproject.toml  requirements.txt  scheduler.py  scrape_ucpd.ipynb  scratch_notebook.ipynb
.github/: issue_template.md  pull_request_template.md
.github/workflows/: format-and-fail.yml  release.yml  requirements-up-to-date.yml  test.yml  ucpd-scrape.yml  validate-requirements.yml  weekday-scrape.yml
incident_scraper/: __main__.py  scrape_ucpd.ipynb  scraper_functions.py  utils.py
incident_scraper/data/: http_headers.json  xgb_types.pkl  xgb_vectorizer.pkl
incident_scraper/google/: client.py  datastore.py
incident_scraper/models/: address_parser.py  classifier.py  incident.py
incident_scraper/scraper/: UCPDScraper.py  headers.py  incident_parser.py  pages.py  scraper_functions.py  ucpd_scraper.py
incident_scraper/utils/: constants.py  functions.py
test/: test_example.py  test_general.py  test_headers.py
tests/: test_headers.py
