[tool.poetry]
name = "ucpd-incident-scraper"
version = "0.1.0"
description = "This code is going to be used to scrape the UCPD Daily Incident every day and store the incidents on a generic JSON data-store through the use of a Python 🐍 job on GCP's Cloud Run."
authors = ["michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
lxml = "^4.9.3"
pytz = "^2023.3"
cssselect = "^1.2.0"
google-cloud-ndb = "^2.1.1"
google-cloud-logging = "^3.6.0"
apscheduler = "^3.10.4"
googlemaps = "^4.10.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
scikit-learn = "^1.3.1"
urllib3 = "1.26.18"
numpy = "^1.26.2"
scikit-multilearn = "^0.2.0"
polars = "^0.19.15"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
xgboost = "^2.0.2"
neattext = "^0.1.3"
click = "^8.1.7"
textblob = "^0.17.1"
censusgeocode = "^0.5.2"
nltk = "^3.8.1"
pydrive2 = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
