[project]
name = "ucpd-incident-scraper"
version = "0.1.0"
description = "This code is going to be used to scrape the UCPD Daily Incident every day and store the incidents on a generic JSON data-store through the use of a Python ðŸ job on GCP's Cloud Run."
authors = ["michplunkett"]
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "apscheduler>=3.11.0",
    "censusgeocode>=0.5.2",
    "click>=8.1.7",
    "cssselect>=1.2.0",
    "google-cloud-logging>=3.11.3",
    "google-cloud-ndb>=2.3.2",
    "googlemaps>=4.10.0",
    "lxml>=5.3.0",
    "neattext>=0.1.3",
    "nltk>=3.9.1",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "pydrive2>=1.21.3",
    "pytest>=8.3.4",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scikit-multilearn>=0.2.0",
    "textblob>=0.18.0.post0",
    "urllib3==1.26.19",
    "xgboost>=2.1.3",
]
